fix(navbar): Adjusts the medium font-size so that the navbar and search icon align on the medium breakpoint.

--- a/styleguide/derek/global-components/mainnav/_mainnav.scss
+++ b/styleguide/derek/global-components/mainnav/_mainnav.scss
@@ -180,6 +180,13 @@
   }
 }
 
+@media only screen and (max-width: $screen-md-max) {
+  .navbar-nav {
+    .navbar-topLink {
+        font-size: $navigation-font-size-medium;
+    }
+  }
+}
 
 @media only screen and (max-width: $screen-sm-max) {
   .navbar-nav {
